# Windows-Red-Teaming

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
atomics/T1003.001/: T1003.001.yaml
atomics/T1003.002/: T1003.002.yaml
atomics/T1003.003/: T1003.003.yaml
atomics/T1003.004/: T1003.004.yaml
atomics/T1007/: T1007.yaml
atomics/T1012/: T1012.yaml
atomics/T1016/: T1016.yaml
atomics/T1018/: T1018.yaml
atomics/T1021.001/: T1021.001.yaml
atomics/T1021.002/: T1021.002.yaml
atomics/T1021.006/: T1021.006.yaml
atomics/T1033/: T1033.yaml
atomics/T1046/: T1046.yaml
atomics/T1047/: T1047.yaml
atomics/T1048.003/: T1048.003.yaml
atomics/T1049/: T1049.yaml
atomics/T1053.005/: T1053.005.yaml
atomics/T1057/: T1057.yaml
atomics/T1059.001/: T1059.001.yaml
atomics/T1059.003/: T1059.003.yaml
atomics/T1068/: T1068.yaml
atomics/T1069.001/: T1069.001.yaml
atomics/T1069.002/: T1069.002.yaml
atomics/T1070.001/: T1070.001.yaml
atomics/T1071.001/: T1071.001.yaml
atomics/T1074.001/: T1074.001.yaml
atomics/T1082/: T1082.yaml
atomics/T1083/: T1083.yaml
config/: settings.example.yaml  techniques.yaml
core/: __init__.py  atomic_models.py  atomic_runner.py  compliance_mapper.py  config.py  engine.py  logger.py  mitre_mapper.py  models.py  reporter.py  session.py
docs/: USAGE.md
modules/: __init__.py  base.py
templates/: report.html
tests/: conftest.py  test_atomic_models.py  test_atomic_runner.py  test_engine.py  test_integration.py  test_models.py  test_reporting.py  test_session.py
(+110 files in other folders)
